@@ -234,7 +234,7 @@ Package-Type: udeb
 Architecture: amd64 arm64 armel armhf hppa i386 m68k mips mipsel mipsn32 mipsn32el mips64 mips64el nios2 powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390x sh4 x32
 Section: debian-installer
 Priority: extra
-Provides: libc6, libc-udeb, ${locale-compat:Depends}
+Provides: libc6, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
@@ -320,7 +320,7 @@ Package-Type: udeb
 Architecture: alpha
 Section: debian-installer
 Priority: extra
-Provides: libc6.1, libc-udeb, ${locale-compat:Depends}
+Provides: libc6.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
@@ -406,7 +406,7 @@ Package-Type: udeb
 Architecture: hurd-i386
 Section: debian-installer
 Priority: extra
-Provides: libc0.3, libc-udeb, ${locale-compat:Depends}
+Provides: libc0.3, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
@@ -492,7 +492,7 @@ Package-Type: udeb
 Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: debian-installer
 Priority: extra
-Provides: libc0.1, libc-udeb, ${locale-compat:Depends}
+Provides: libc0.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
@@ -885,32 +885,4 @@ Description: GNU C Library: Shared libraries (EV67 optimized)
  This set of libraries is optimized for the Alpha EV67. It only
  needs to be installed on Alpha EV67/68 and EV7 machines. If you install
  this on an older machine, it won't even be used.
-
-Package: libnss-dns-udeb
-Package-Type: udeb
-Architecture: any
-Section: debian-installer
-Priority: extra
-Build-Profiles: <!stage1>
-Description: GNU C Library: NSS helper for DNS - udeb
- Contains the standard libraries that are used by nearly all programs on
- the system. This package includes shared versions of the standard C library
- and the standard math library, as well as many others.
- .
- This package contains the DNS NSS helper needed for the Debian installer.
- Do not install it on a normal system.
-
-Package: libnss-files-udeb
-Package-Type: udeb
-Architecture: any
-Section: debian-installer
-Priority: extra
-Build-Profiles: <!stage1>
-Description: GNU C Library: NSS helper for files - udeb
- Contains the standard libraries that are used by nearly all programs on
- the system. This package includes shared versions of the standard C library
- and the standard math library, as well as many others.
- .
- This package contains the files NSS helper needed for the Debian installer.
- Do not install it on a normal system.
 
