@@ -74,7 +74,7 @@ Package-Type: udeb
 Architecture: @archs@
 Section: debian-installer
 Priority: extra
-Provides: @libc@, libc-udeb, ${locale-compat:Depends}
+Provides: @libc@, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
