@@ -1,14 +1,0 @@
-Package: libnss-files-udeb
-Package-Type: udeb
-Architecture: any
-Section: debian-installer
-Priority: extra
-Build-Profiles: <!stage1>
-Description: GNU C Library: NSS helper for files - udeb
- Contains the standard libraries that are used by nearly all programs on
- the system. This package includes shared versions of the standard C library
- and the standard math library, as well as many others.
- .
- This package contains the files NSS helper needed for the Debian installer.
- Do not install it on a normal system.
-
