@@ -12,4 +12,5 @@ TMPDIR/SLIBDIR/libutil* lib
 TMPDIR/SLIBDIR/libcrypt* lib
 TMPDIR/SLIBDIR/librt*.so* lib
 TMPDIR/SLIBDIR/libpthread*.so* lib
-
+TMPDIR/SLIBDIR/libnss_dns*.so* lib
+TMPDIR/SLIBDIR/libnss_files*.so* lib
