@@ -1,3 +1,0 @@
-# FIXME: someday we may need to handle installing into non-lib.
-TMPDIR/SLIBDIR/libnss_dns*.so* lib
-
