@@ -40,8 +40,6 @@ $(stamp)control: debian/rules.d/control.mk $(control_deps)
 	cat debian/control.in/kfreebsd-i386	>> $@T
 	cat debian/control.in/x32		>> $@T
 	cat debian/control.in/opt		>> $@T
-	cat debian/control.in/libnss-dns-udeb	>> $@T
-	cat debian/control.in/libnss-files-udeb	>> $@T
 	sed -e 's%@libc@%$(libc)%g' -e 's%@GLIBC_VERSION@%$(GLIBC_VERSION)%g' < $@T > debian/control
 	rm $@T
 	touch $@
