@@ -3,6 +3,10 @@ glibc (2.22-5) UNRELEASED; urgency=medium
   [ Samuel Thibault ]
   * testsuite-xfail-debian.mk: Disable the problematic test-lfs test on hurd.
 
+  [ Aurelien Jarno ]
+  * Drop libnss-dns-udeb and libnss-files-udeb and merge the files they
+    include in libc6-udeb.
+
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 21 Mar 2016 18:45:40 +0100
 
 glibc (2.22-4) unstable; urgency=medium
